--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,22 @@
     justify-content: center;
     padding: 9rem 0;
 }
+
+.load-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: 2050;
+    pointer-events: none;
+}
+
+.loading-screen {
+    position: absolute;
+    top: 0;
+    background-color: var(--pink-10);
+    height: 25%;
+    width: 0%;
+}
